fixed overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -15,4 +15,5 @@
   justify-content: space-between;
   height: calc(100vh - 145px);
   padding-top: 10px;
+  overflow:auto; 
 }
